--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.4.11",
     "@nestjs/typeorm": "^10.0.2",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "passport": "^0.7.0",
